Wed Sep 19 14:17:31 2001  Owen Taylor  <otaylor@redhat.com>

	Patch from Matthias Clasen (#59806)

	* configure.in: Check for vasprintf().

	* glib/gmem.[ch]: Add g_mem_vtable_is_set() to be used
	for efficiency hacks to avoid extra copies when not
	needed.

	* glib/gstrfuncs.c: Use vasprintf() to implement
	g_strdup_printf() when available.

	* glib/gmessages.c (g_logv): Avoid using 
	printf_string_upper_bound() when we have have vsnprintf.

	* glib/gmessages.c (printf_string_upper_bound): Don't
	segfault when warning about positional parameters.

Wed Sep 19 14:05:27 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/{gcache.c,gmem.c,grel.c,gstring.c,gtimer.c,gtree}:
	Patch from Darin Adler to remove GReal* structures in
	favor of simple opaque typedefs in cases where there
	were no non-private members. (#59693)

Wed Sep 19 13:03:38 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/giochannel.c (g_io_channel_read/write_chars): Handle NUL
	bytes_written, bytes_read. (Suggested by Joshua N Pritikin, #59550)

Wed Sep 19 12:49:11 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gutils.c (g_get_any_init): Handle failure of
	sysconf and pick a fixed size buffer. (Happens on Cygwin
	#60242)

Wed Sep 19 11:23:41 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Error out if gettext support is not found. (#59386)

2001-09-19  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/gthread.h (GThreadFunctions): Add thread_equal function to
	allow for platform defined function to compare two threads.

	* glib/gthread.c: Use g_thread_functions_for_glib_use.thread_equal
	when non-NULL instead of ==.
	
Wed Sep 19 10:44:25 2001  Tim Janik  <timj@gtk.org>

	* Released 1.3.8.

Tue Sep 18 22:57:33 2001  Tim Janik  <timj@gtk.org>

	* configure.in (GLIB_MICRO_VERSION): up version number to 1.3.8,
	interface age 0, binary age 0.

	* NEWS: updates.

Tue Sep 18 18:23:02 2001  Owen Taylor  <otaylor@redhat.com>

	Fixes for compilation on Solaris (#59026, Frank Belew)
